<resources>
    <string name="app_name">ScoreKeep</string>

    <!--    Home -->
    <string name="subTitleMain">What do you need to do?</string>
    <string name="mainButton1">Keep Score</string>
    <string name="mainButton2">Keep Time</string>
    <string name="mainButton3">Roll Dice</string>

    <!--    ScoreKeepMode -->
    <string name="subTitleScoreMode">Score Mode</string>
    <string name="subsubTitleScoreMode">How would you like to keep score?</string>
    <string name="b_local">Offline</string>
    <string name="b_online">Online</string>
    <string name="b_sports">Head to Head</string>

    <!--    Local Setup -->
    <string name="subTitleLocalSetup">How many players do you have?</string>
    <string name="e_numPlayers">Enter Number</string>
    <string name="b_okay">OK</string>
    <string name="titleLocalSetup">Setup</string>

    <!--    Local Setup Fragment -->
    <string name="b_numPlayers">Done</string>
    <string name="ethint_enterName">Enter Name</string>
    <string name="localSetupTitle">What are their names?</string>

    <!--    Local Scoreboard -->
    <string name="localScoreboardTitle">Scoreboard</string>
    <string name="tableNames"><u>Names</u></string>
    <string name="tableCurrent"><u>Current Score</u></string>
    <string name="tableNew"><u>This Round</u></string>
    <string name="et_newScore">0</string>
    <string name="b_endround">Add Scores</string>
    <string name="b_endGame">End Game</string>

    <!--    End Game-->
    <string name="endGameTitle">The results\nare in...</string>
    <string name="endGameTitleLandscape">The results are in...</string>
    <string name="b_playAgain">New Game</string>
    <string name="winner"><u>WINNER</u></string>

    <!--    Online Setup-->
    <string name="b_hostGame">Host Game</string>
    <string name="b_joinOL">Join Game</string>
    <string name="onlineSetupTitle">Online Setup</string>
    <string name="onlineSetupSubTitle">Choose an option:</string>

    <!--    Online Host Start-->
    <string name="shareCodeTitle">Share this room code with the other players:</string>
    <string name="et_hostStart">Enter Nickname</string>
    <string name="b_openRoom">Open Room</string>
    <string name="hostStartTitle">Host Setup</string>

    <!--    Online Player Join-->
    <string name="playerJoinTitle">Join a Game</string>
    <string name="playerJoinSubTitle">Enter your nickname\n&#38; room code:</string>
    <string name="et_nicknameHint">JaneDoe</string>
    <string name="et_roomCodeHint">WXYZ</string>

    <!--    Online Scoreboard -->
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="onlineScoreboardTitle">Scoreboard</string>

    <!--    Sports Set up -->
    <string name="sportsSetupTitle">Sport Mode Setup</string>
    <string name="b_startGame">Start Game</string>
    <string name="et_sportsHint">How much does score go up by?</string>
    <string name="et_leftTeam">Left Team Name</string>
    <string name="et_rightGame">Right Team Name</string>
    <string name="et_winCond">Points needed to win? (optional)</string>

    <!--    Sports Mode -->
    <string name="team">Team</string>

    <!--    Dice Roll -->
    <string name="diceTitle">Roll a Dice</string>
    <string name="et_numSides">Number of Sides</string>
    <string name="b_roll">Roll</string>

    <!--    Timer Choose Activity -->
    <string name="timeActivityTitle">Time Keeping Mode</string>
    <string name="timerTab">Timer</string>
    <string name="stopWatchTab">Stopwatch</string>

    <!--    Timer/Stopwatch Fragments -->
    <string name="hour">hrs</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="b_reset">reset</string>
    <string name="b_start">start</string>
    <string name="b_stop">stop</string>


    <!--    Help -->
    <string name="offlineDescription">In this mode\, only one player is required to have the app on their device. The player \(host\) enters the players names and creates a gameboard. During gameplay, the host enters everyone\'s scores at the end of every round. The app keeps track and calculates the scores and displays the winner when the game is ended.</string>
    <string name="onlineDescription">In this mode\, all players are required to have the app on their device and maintain an internet connection. One player will host the game which creates a \"room\" with a room code that they must distribute to the rest of the players. The rest of the players join the \"room\" by entering the room code.  During gameplay\, each player enters their own score on their device at the end of every round. The scoreboard is updated on each player\'s device  in real time. </string>
    <string name="head2headDescription">This mode is limited to landscape only. It is meant to keep score for two players or teams playing against eachother. In this mode, the two players/teams names are entered, as well as some other set up information. The scoreboard contains buttons to increase or decrease each teams score. The screen is split into two\, with each player\/teams score displayed on each side of the screen in large numbers. </string>
    <string name="timerDescription">The player can use the buttons to select an amount of time. Once the player presses start, the timer starts to count down.  The timer will continue even if the player leaves the page and comes back to it. </string>
    <string name="stopWatchDescription">In this mode\, once the player presses the start button, the app keeps track of the time elapsed to the 10th of a second. </string>
    <string name="diceDescription">In this mode\, the player chooses how many sides the \"dice\" will have. The default is 6. The player can press \"roll\" to get a number. </string>
    <string name="helpTitle">Help</string>
    <string name="helpSubTitle">What do the modes do?</string>
    <string name="helpHeading1">Score-keeping</string>
    <string name="helpHeading2">Offline</string>
    <string name="helpHeading3">Online</string>
    <string name="helpHeading4">Head to Head</string>
    <string name="helpHeading5">Time-keeping</string>
    <string name="helpHeading6">Timer</string>
    <string name="helpHeading7">Stopwatch</string>
    <string name="helpHeading8">Rolling Dice</string>


    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>



</resources>