<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HeadtoHeadSetupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarSportSetup"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_30"
            app:title="@string/sportsSetupTitle"
            app:titleCentered="true"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_teamLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/et_leftTeam"
            android:inputType="textPersonName|textCapWords"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_teamRName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/et_rightGame"
            android:inputType="textPersonName|textCapWords"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/et_sportsHint"
            android:inputType="number"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_win"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/et_winCond"
            android:inputType="number"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/b_startSport"
            style="@style/primaryButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/b_startGame" />
    </LinearLayout>

</LinearLayout>