<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_localsetup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".LocalSetup">

    <LinearLayout
        android:id="@+id/layout_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ls_title"
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/titleLocalSetup"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <EditText
                android:id="@+id/et_numPlayers"
                style="@style/et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/e_numPlayers"
                android:inputType="numberSigned"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="viewStart"
                android:autofillHints="" />

            <Button
                android:id="@+id/b_start"
                style="@style/primaryButtonSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/b_start" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_enterNames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pink_dark">

        </FrameLayout>

    </LinearLayout>

</LinearLayout>